--- a/Task-2-Task-Manager/frontend/src/App.css
+++ b/Task-2-Task-Manager/frontend/src/App.css
@@ -1,38 +1,138 @@
 .App {
+  margin: 20px auto;
+  border-radius: 8px;
+}
+
+.home-heading {
+  text-align: center;
+  color:  #006aff;
+  font-size: 2rem;
+}
+
+.form-container{
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.form{
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.form-rows{
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+}
+
+.form-inputs{ 
+  padding: 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  font-size: 1rem;
+  flex: 1;
+  resize: none;
+}
+
+.form-title{
+  flex: 2;
+}
+
+.form-button{
+  padding: 10px;
+  background-color: #006aff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  align-self: center;
+  width: 20%;
+}
+
+.form-button:hover {
+  background-color: #002463;
+}
+
+.task-list{
+  list-style: none;
+  padding: 0;
+  margin: 20px auto 0;
+  max-width: 800px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  overflow: hidden;
+}
+
+.task-list-item {
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+.task-header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.task-list-item h3 {
+  margin: 0;
+  font-size: 1.25rem;
+  color: #333;
+  margin-right: 15px;
+}
+
+.no-items{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.task-date {
+  margin: 0;
+  font-size: 1rem;
+  color: #777;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.task-list-item p {
+  margin: 5px 0;
+  color: #555;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.task-actions {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 10px;
+  justify-content: flex-end;
 }
 
-.App-link {
-  color: #61dafb;
+.task-list-item button {
+  padding: 8px 12px;
+  font-size: 0.85rem;
+  margin-right: 10px;
+  background-color: #006aff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-list-item button:hover{
+  background-color: #002463;
+}
+
+.task-list-item a button {
+  margin-right: 10px;
 }
