--- a/Task-2-Task-Manager/frontend/src/App.css
+++ b/Task-2-Task-Manager/frontend/src/App.css
@@ -1,6 +1,10 @@
 .App {
-  margin: 20px auto;
+  margin: 50px;
   border-radius: 8px;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
 }
 
 .home-heading {
@@ -13,14 +17,15 @@
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
+  border-radius: 8px;
 }
 
 .form{
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
+  margin-bottom: 20px;
   border-radius: 8px;
-  background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -97,6 +102,7 @@
 
 .no-items{
   text-align: center;
+  font-size: 1.5rem;
 }
 
 .task-date {
